# pep-api-service

./: .coveragerc  .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/anamnese/: apps.py  serializers.py  urls.py  views.py
app/core/: apis.py  authentication.py  rabbitmq.py
app/core/templates/: elements.html
app/evolucao/: apps.py  serializers.py  urls.py  views.py
app/receituario/: apps.py  serializers.py  urls.py  views.py
config/docker/: entrypoint.sh
docs/: PEP_via_db.md  README_API.md  README_desafio.md  der_dbml.md  init-db.sql  script-chave-primaria-nula.sql  script-dados-duplicados.sql
project/: serializers.py  settings.py  urls.py
tests/: conftest.py
tests/anamnese/: test_views_anamnese.py
tests/core/: test_apis.py  test_authentication.py  test_rabbitmq.py
tests/evolucao/: test_views_evolucao.py
tests/receituario/: test_views_receituario.py
